syntax = "proto3";

package proto;

option go_package = "HyperLightLogistics-Go/api/proto";
option java_multiple_files = true;

service DeliveryOptionsService {
    rpc CalculateDeliveryOptions (DeliveryRequest) returns (DeliveryResponse) {}
}

message Product {
    uint64 productId = 1;
    uint32 quantity = 2;
}

message DeliveryAddress {
    string country = 1;
    string state = 2;
    string city = 3;
    string street = 4;
    string zipcode = 5;
}

message DeliveryRequest {
    uint64 customerId = 1;
    DeliveryAddress deliveryAddress = 2;
    repeated Product products = 3;
}

message DeliveryOptions {
    string type = 1;
    string deliveryTime = 2;
    double price = 3;
}

message DeliveryResponse {
    repeated DeliveryOptions deliveryOptions = 1;
}